updaing these files to remove jubilat from header groups, add credits to the photos, add some quick text tricks and also fix spacing issues,,, i hope

--- a/generators/styles/templates/src/scss/_ads.scss
+++ b/generators/styles/templates/src/scss/_ads.scss
@@ -1,7 +1,7 @@
 .content-group.ad {
   text-align: center;
   margin: 0px auto;
-  padding: 20px 0;
+  padding: 30px 0;
   .ad-slot.flex{
     text-align: center;
   }
